# stacky

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  build_defs.bzl  pyproject.toml  requirements.in  requirements_lock.txt  setup.py
.github/workflows/: after_master_push.yml  ci.yml  release.yml
patches/: BUILD.bazel  protobuf-no-kotlin.patch  rules-python-no-stardoc.patch
src/stacky/: __init__.py  stacky.py  stacky_test.py
tools/: workspace_status.sh
