load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("@pypi//:requirements.bzl", "requirement")


py_binary(
    name = "stacky",
    srcs = ["src/stacky/stacky.py"],
    main = "src/stacky/stacky.py",
    deps = [
        requirement("ansicolors"),
        requirement("simple-term-menu"),
        requirement("asciitree"),
    ]
)

exports_files(["requirements.txt"])

# Update dependencies with:
# bazel run //:requirements.update
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)
