load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("@rules_python//python:defs.bzl", "py_binary")
load("@pypi//:requirements.bzl", "requirement")
load("//:build_defs.bzl", "stacky_build_info")

stacky_build_info(
    name = "stacky_build_info",
    out = "_stacky_build_info.py",
)

py_binary(
    name = "stacky",
    srcs = [
        "src/stacky/stacky.py",
        ":stacky_build_info",
    ],
    main = "src/stacky/stacky.py",
    stamp = 1,
    deps = [
        requirement("ansicolors"),
        requirement("simple-term-menu"),
        requirement("asciitree"),
    ],
)

exports_files(["requirements.txt"])

# Update dependencies with:
# bazel run //:requirements.update
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)
